# kedro-kubeflow

./: .bumpversion.cfg  .codeclimate.yml  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .spellcheck.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  kubeflow_conf.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  e2e-test.yml  prepare-release.yml  publish.yml  python-package.yml  spellcheck.yml  test.yml
docs/: conf.py  index.rst  requirements.txt  spellcheck_exceptions.txt
docs/source/01_introduction/: 01_intro.md
docs/source/02_installation/: 01_installation.md  02_configuration.md  index.rst
docs/source/03_getting_started/: 01_quickstart.md  02_ai_pipielines.md  02_gcp.md  03_mlflow.md  04_continuous_deployment.md  05_authentication.md  index.rst
docs/source/04_contributing/: 01_guideline.md  02_local_testing.md  index.rst
kedro_kubeflow/: __init__.py  auth.py  ci.py  cli.py  config.py  config_new.py  context_helper.py  generator.py  generator_v2.py  hooks.py  kfpclient.py  plugin.py  utils.py  vertexaiclient.py
kedro_kubeflow/generators/: __init__.py  one_pod_pipeline_generator.py  pod_per_node_pipeline_generator.py  utils.py
kedro_kubeflow/hooks/: config_loader_hook.py
kedro_kubeflow/templates/: github-on-merge-to-master.yml  github-on-push.yml
kedro_kubeflow/vertex_ai/: __init__.py  client.py  generator.py  io.py
tests/: __init__.py  common.py  test_auth.py  test_cli.py  test_config.py  test_config.yml  test_context_helper.py  test_extra_volumes.py  test_function.py  test_generator.py  test_generator_utils.py  test_generator_v2.py  test_hooks.py  test_kfpclient.py  test_mod.py  test_one_pod_pipeline_generator.py  test_pod_per_node_pipeline_generator.py  test_vertex_ai_client.py  test_vertex_ai_generator.py  test_vertexaiclient.py  utils.py
tests/conf/unittests/: test_config.yml
tests/e2e/: catalog.yml  kubeflow.yml  starter-config.yml
tests/hooks/: config.yml  test_config_loader_hook.py
